mega update du code dans la plupart des classes